frontend/redis/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
spec:
  ingressClassName: nginx
  rules:
  - host: rubinity.stackit.gg
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redis-svc
            port:
              number: 80
  - host: rubinity.stackit.gg
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api-svc
            port:
              number: 80
